crates/ddlog-syntax/tests/validation/fail/input_function.rast
ROOT@0..82
  COMMENT@0..50 "// kind:item validate ..."
  WHITESPACE@50..51 "\n"
  ITEM@51..82
    FUNCTION_DEF@51..82
      ATTRIBUTES@51..51
      MODIFIERS@51..63
        EXTERN@51..57 "extern"
        WHITESPACE@57..58 " "
        INPUT@58..63 "input"
      WHITESPACE@63..64 " "
      FUNCTION@64..72 "function"
      WHITESPACE@72..73 " "
      FUNCTION_NAME@73..76
        IDENT@73..76 "foo"
      FUNCTION_ARGS@76..78
        L_PAREN@76..77 "("
        R_PAREN@77..78 ")"
      WHITESPACE@78..79 " "
      BLOCK@79..81
        L_CURLY@79..80 "{"
        R_CURLY@80..81 "}"
      WHITESPACE@81..82 "\n"
--
Error: received an 'input' modifier on a function definition
   ,-[validation/fail/input_function.dl:2:8]
   |
 2 | extern input function foo() {}
   :        ^^|^^  
   :          `---- functions cannot be marked as 'input'
---'
--
// kind:item validate:true pass:false ignore:false
extern input function foo() {}
